--- a/src/Client/style.scss
+++ b/src/Client/style.scss
@@ -8,5 +8,5 @@ $fa_font_path: "~@fortawesome/fontawesome-free/webfonts";
 @import '~@fortawesome/fontawesome-free/scss/brands.scss';
 
 // Bulma
-@import "~bulma/bulma";
+@import "~bulmaswatch/materia/bulmaswatch";
 
