Experimental simplication of modules.

--- a/src/Client/style.scss
+++ b/src/Client/style.scss
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
 // FontAwesome
-$fa_font_path: "~@fortawesome/fontawesome-free/webfonts";
-@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
-@import '~@fortawesome/fontawesome-free/scss/regular.scss';
-@import '~@fortawesome/fontawesome-free/scss/solid.scss';
-@import '~@fortawesome/fontawesome-free/scss/brands.scss';
+// $fa_font_path: "~@fortawesome/fontawesome-free/webfonts";
+// @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+// @import '~@fortawesome/fontawesome-free/scss/regular.scss';
+// @import '~@fortawesome/fontawesome-free/scss/solid.scss';
+// @import '~@fortawesome/fontawesome-free/scss/brands.scss';
 
 // Bulma
-@import "~bulmaswatch/materia/bulmaswatch";
+//@import "~bulmaswatch/materia/bulmaswatch";
 
